# obs-lua

./: .gitignore  CMakeLists.txt  lua-console.cpp  lua-console.hpp  lua_cstring.i  lua_extensions.i  obs-lua-extras.i  obs-lua.c  obs-source-wrap.i  obs.i
forms/: lua-console.ui
scripts/: exec.lua  test.lua
